; ModuleID = '/home/carl/AnghaBench/php-src/ext/openssl/extr_openssl.c_php_openssl_pkey_init_dh.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/openssl/extr_openssl.c_php_openssl_pkey_init_dh.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @php_openssl_pkey_init_dh to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @php_openssl_pkey_init_dh(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = call i32 @OPENSSL_PKEY_SET_BN(i32* %11, i32* %12)
  %14 = load i32*, i32** %5, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = call i32 @OPENSSL_PKEY_SET_BN(i32* %14, i32* %15)
  %17 = load i32*, i32** %5, align 8
  %18 = load i32*, i32** %8, align 8
  %19 = call i32 @OPENSSL_PKEY_SET_BN(i32* %17, i32* %18)
  %20 = load i32*, i32** %6, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %22, label %32

22:                                               ; preds = %2
  %23 = load i32*, i32** %8, align 8
  %24 = icmp ne i32* %23, null
  br i1 %24, label %25, label %32

25:                                               ; preds = %22
  %26 = load i32*, i32** %4, align 8
  %27 = load i32*, i32** %6, align 8
  %28 = load i32*, i32** %7, align 8
  %29 = load i32*, i32** %8, align 8
  %30 = call i32 @DH_set0_pqg(i32* %26, i32* %27, i32* %28, i32* %29)
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %33, label %32

32:                                               ; preds = %25, %22, %2
  store i32 0, i32* %3, align 4
  br label %71

33:                                               ; preds = %25
  %34 = load i32*, i32** %5, align 8
  %35 = load i32*, i32** %9, align 8
  %36 = call i32 @OPENSSL_PKEY_SET_BN(i32* %34, i32* %35)
  %37 = load i32*, i32** %5, align 8
  %38 = load i32*, i32** %10, align 8
  %39 = call i32 @OPENSSL_PKEY_SET_BN(i32* %37, i32* %38)
  %40 = load i32*, i32** %10, align 8
  %41 = icmp ne i32* %40, null
  br i1 %41, label %42, label %47

42:                                               ; preds = %33
  %43 = load i32*, i32** %4, align 8
  %44 = load i32*, i32** %10, align 8
  %45 = load i32*, i32** %9, align 8
  %46 = call i32 @DH_set0_key(i32* %43, i32* %44, i32* %45)
  store i32 %46, i32* %3, align 4
  br label %71

47:                                               ; preds = %33
  %48 = load i32*, i32** %9, align 8
  %49 = icmp ne i32* %48, null
  br i1 %49, label %50, label %63

50:                                               ; preds = %47
  %51 = load i32*, i32** %9, align 8
  %52 = load i32*, i32** %8, align 8
  %53 = load i32*, i32** %6, align 8
  %54 = call i32* @php_openssl_dh_pub_from_priv(i32* %51, i32* %52, i32* %53)
  store i32* %54, i32** %10, align 8
  %55 = load i32*, i32** %10, align 8
  %56 = icmp eq i32* %55, null
  br i1 %56, label %57, label %58

57:                                               ; preds = %50
  store i32 0, i32* %3, align 4
  br label %71

58:                                               ; preds = %50
  %59 = load i32*, i32** %4, align 8
  %60 = load i32*, i32** %10, align 8
  %61 = load i32*, i32** %9, align 8
  %62 = call i32 @DH_set0_key(i32* %59, i32* %60, i32* %61)
  store i32 %62, i32* %3, align 4
  br label %71

63:                                               ; preds = %47
  %64 = call i32 (...) @PHP_OPENSSL_RAND_ADD_TIME()
  %65 = load i32*, i32** %4, align 8
  %66 = call i32 @DH_generate_key(i32* %65)
  %67 = icmp ne i32 %66, 0
  br i1 %67, label %70, label %68

68:                                               ; preds = %63
  %69 = call i32 (...) @php_openssl_store_errors()
  store i32 0, i32* %3, align 4
  br label %71

70:                                               ; preds = %63
  store i32 1, i32* %3, align 4
  br label %71

71:                                               ; preds = %70, %68, %58, %57, %42, %32
  %72 = load i32, i32* %3, align 4
  ret i32 %72
}

declare dso_local i32 @OPENSSL_PKEY_SET_BN(i32*, i32*) #1

declare dso_local i32 @DH_set0_pqg(i32*, i32*, i32*, i32*) #1

declare dso_local i32 @DH_set0_key(i32*, i32*, i32*) #1

declare dso_local i32* @php_openssl_dh_pub_from_priv(i32*, i32*, i32*) #1

declare dso_local i32 @PHP_OPENSSL_RAND_ADD_TIME(...) #1

declare dso_local i32 @DH_generate_key(i32*) #1

declare dso_local i32 @php_openssl_store_errors(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
